--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 env:
-  REPOSITORY: ${{ secrets.DOCKER_HUB_ORGS }}/fluentd-kubernetes-daemonset
+  REPOSITORY: ${{ secrets.DOCKER_HUB_ORGS || github.repository_owner }}/fluentd-kubernetes-daemonset
 jobs:
   define-matrix:
     runs-on: ubuntu-latest
@@ -48,10 +48,6 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           platforms: linux/amd64
-      - uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Setup tags
         run: |
           set -x
@@ -92,10 +88,6 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           platforms: linux/arm64
-      - uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Setup tags
         run: |
           set -x
