--- a/docker-image/v1.16/debian-stackdriver/conf/fluent.conf
+++ b/docker-image/v1.16/debian-stackdriver/conf/fluent.conf
@@ -9,26 +9,23 @@
 
 <match **>
   @type google_cloud
-  @id out_google_cloud
-
-  # Set the buffer type to file to improve the reliability and reduce the memory consumption
+  detect_json true
+  enable_monitoring true
+  monitoring_type prometheus
+  # Allow entries from multiple system logs to be sent in the same request.
+  split_logs_by_tag false
+  detect_subservice false
   buffer_type file
-  buffer_path /var/log/fluentd-buffers/stackdriver.buffer
-  # Set queue_full action to block because we want to pause gracefully
-  # in case of the off-the-limits load instead of throwing an exception
+  buffer_path /var/log/fluentd-buffers/kubernetes.system.buffer
   buffer_queue_full_action block
-  # Set the chunk limit conservatively to avoid exceeding the GCL limit
-  # of 10MiB per write request.
-  buffer_chunk_limit 2M
-  # Cap the combined memory usage of this buffer and the one below to
-  # 2MiB/chunk * (6 + 2) chunks = 16 MiB
-  buffer_queue_limit 6
-  # Never wait more than 5 seconds before flushing logs in the non-error case.
+  buffer_chunk_limit 512k
+  buffer_queue_limit 2
   flush_interval 5s
-  # Never wait longer than 30 seconds between retries.
   max_retry_wait 30
-  # Disable the limit on the number of retries (retry forever).
-  # disable_retry_limit
-  # Use multiple threads for processing.
+  disable_retry_limit
   num_threads 2
+  use_grpc true
+  # Skip timestamp adjustment as this is in a controlled environment with
+  # known timestamp format. This helps with CPU usage.
+  adjust_invalid_timestamps false
 </match>
